fooParser.output
Terminals unused in grammar

    "<<="
    ">>="
    "&="
    "^="
    "|="


Grammar

    0 $accept: P $end

    1 P: %empty
    2  | P Type Identifier '=' E ';'
    3  | P fn_dec
    4  | P fn_def

    5 SS: %empty
    6   | SS S

    7 E_null: %empty
    8       | E

    9 S: ';'
   10  | E ';'
   11  | '{' SS '}'
   12  | IF '(' E ')' S ELSE S
   13  | IF '(' E ')' S
   14  | WHILE '(' E ')' S
   15  | WHILE '(' ')' S
   16  | DO S WHILE '(' E ')' ';'
   17  | Identifier ':'
   18  | GOTO Identifier ';'
   19  | RETURN ';'
   20  | RETURN E ';'
   21  | CONTINUE ';'
   22  | BREAK ';'
   23  | FOR '(' E_null ';' E_null ';' E_null ')' S

   24 E: '!' E
   25  | '~' E
   26  | '-' E
   27  | '+' E
   28  | "++" Identifier
   29  | "--" Identifier
   30  | E '*' E
   31  | E '/' E
   32  | E '%' E
   33  | E '+' E
   34  | E '-' E
   35  | E "<<" E
   36  | E ">>" E
   37  | E '<' E
   38  | E "<=" E
   39  | E '>' E
   40  | E ">=" E
   41  | E "==" E
   42  | E "!=" E
   43  | E '&' E
   44  | E '^' E
   45  | E '|' E
   46  | E "&&" E
   47  | E "||" E
   48  | E '?' E ':' E
   49  | E '=' E
   50  | E "+=" E
   51  | E "-=" E
   52  | E "*=" E
   53  | E "/=" E
   54  | E "%=" E
   55  | '(' E ')'
   56  | Int_Constant
   57  | Identifier
   58  | Identifier '(' ')'
   59  | Identifier '(' Elist ')'

   60 Elist: E
   61      | Elist ',' E

   62 deflist: Type Identifier '=' E
   63        | deflist ',' Type Identifier '=' E

   64 def: Type Identifier '=' E
   65    | def ',' Identifier '=' E

   66 fn_dec: Type Identifier '(' ')' ';'
   67       | Type Identifier '(' deflist ')' ';'

   68 fn_def: Type Identifier '(' ')' '{' SS '}'
   69       | Type Identifier '(' deflist ')' '{' SS '}'
   70       | Type Identifier '(' ')' '{' def ';' SS '}'
   71       | Type Identifier '(' deflist ')' '{' def ';' SS '}'


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 24
    '%' (37) 32
    '&' (38) 43
    '(' (40) 12 13 14 15 16 23 55 58 59 66 67 68 69 70 71
    ')' (41) 12 13 14 15 16 23 55 58 59 66 67 68 69 70 71
    '*' (42) 30
    '+' (43) 27 33
    ',' (44) 61 63 65
    '-' (45) 26 34
    '/' (47) 31
    ':' (58) 17 48
    ';' (59) 2 9 10 16 18 19 20 21 22 23 66 67 70 71
    '<' (60) 37
    '=' (61) 2 49 62 63 64 65
    '>' (62) 39
    '?' (63) 48
    '^' (94) 44
    '{' (123) 11 68 69 70 71
    '|' (124) 45
    '}' (125) 11 68 69 70 71
    '~' (126) 25
    error (256)
    Int_Constant (258) 56
    Identifier (259) 2 17 18 28 29 57 58 59 62 63 64 65 66 67 68 69 70 71
    Type (260) 2 62 63 64 66 67 68 69 70 71
    IF (261) 12 13
    ELSE (262) 12
    WHILE (263) 14 15 16
    DO (264) 16
    RETURN (265) 19 20
    GOTO (266) 18
    CONTINUE (267) 21
    BREAK (268) 22
    FOR (269) 23
    "++" (270) 28
    "--" (271) 29
    "+=" (272) 50
    "-=" (273) 51
    "*=" (274) 52
    "/=" (275) 53
    "%=" (276) 54
    "<<=" (277)
    ">>=" (278)
    "&=" (279)
    "^=" (280)
    "|=" (281)
    "&&" (282) 46
    "||" (283) 47
    "<<" (284) 35
    ">>" (285) 36
    "==" (286) 41
    "!=" (287) 42
    "<=" (288) 38
    ">=" (289) 40
    THEN (290)
    U_OPT3 (291)
    U_pos (292)
    U_neg (293)
    U_LADD (294)
    U_LSUB (295)


Nonterminals, with rules where they appear

    $accept (62)
        on left: 0
    P (63)
        on left: 1 2 3 4
        on right: 0 2 3 4
    SS (64)
        on left: 5 6
        on right: 6 11 68 69 70 71
    E_null (65)
        on left: 7 8
        on right: 23
    S (66)
        on left: 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23
        on right: 6 12 13 14 15 16 23
    E (67)
        on left: 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59
        on right: 2 8 10 12 13 14 16 20 24 25 26 27 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 60 61 62 63 64 65
    Elist (68)
        on left: 60 61
        on right: 59 61
    deflist (69)
        on left: 62 63
        on right: 63 67 69 71
    def (70)
        on left: 64 65
        on right: 65 70 71
    fn_dec (71)
        on left: 66 67
        on right: 3
    fn_def (72)
        on left: 68 69 70 71
        on right: 4


State 0

    0 $accept: . P $end

    $default  reduce using rule 1 (P)

    P  go to state 1


State 1

    0 $accept: P . $end
    2 P: P . Type Identifier '=' E ';'
    3  | P . fn_dec
    4  | P . fn_def

    $end  shift, and go to state 2
    Type  shift, and go to state 3

    fn_dec  go to state 4
    fn_def  go to state 5


State 2

    0 $accept: P $end .

    $default  accept


State 3

    2 P: P Type . Identifier '=' E ';'
   66 fn_dec: Type . Identifier '(' ')' ';'
   67       | Type . Identifier '(' deflist ')' ';'
   68 fn_def: Type . Identifier '(' ')' '{' SS '}'
   69       | Type . Identifier '(' deflist ')' '{' SS '}'
   70       | Type . Identifier '(' ')' '{' def ';' SS '}'
   71       | Type . Identifier '(' deflist ')' '{' def ';' SS '}'

    Identifier  shift, and go to state 6


State 4

    3 P: P fn_dec .

    $default  reduce using rule 3 (P)


State 5

    4 P: P fn_def .

    $default  reduce using rule 4 (P)


State 6

    2 P: P Type Identifier . '=' E ';'
   66 fn_dec: Type Identifier . '(' ')' ';'
   67       | Type Identifier . '(' deflist ')' ';'
   68 fn_def: Type Identifier . '(' ')' '{' SS '}'
   69       | Type Identifier . '(' deflist ')' '{' SS '}'
   70       | Type Identifier . '(' ')' '{' def ';' SS '}'
   71       | Type Identifier . '(' deflist ')' '{' def ';' SS '}'

    '='  shift, and go to state 7
    '('  shift, and go to state 8


State 7

    2 P: P Type Identifier '=' . E ';'

    Int_Constant  shift, and go to state 9
    Identifier    shift, and go to state 10
    "++"          shift, and go to state 11
    "--"          shift, and go to state 12
    '+'           shift, and go to state 13
    '-'           shift, and go to state 14
    '!'           shift, and go to state 15
    '~'           shift, and go to state 16
    '('           shift, and go to state 17

    E  go to state 18


State 8

   66 fn_dec: Type Identifier '(' . ')' ';'
   67       | Type Identifier '(' . deflist ')' ';'
   68 fn_def: Type Identifier '(' . ')' '{' SS '}'
   69       | Type Identifier '(' . deflist ')' '{' SS '}'
   70       | Type Identifier '(' . ')' '{' def ';' SS '}'
   71       | Type Identifier '(' . deflist ')' '{' def ';' SS '}'

    Type  shift, and go to state 19
    ')'   shift, and go to state 20

    deflist  go to state 21


State 9

   56 E: Int_Constant .

    $default  reduce using rule 56 (E)


State 10

   57 E: Identifier .
   58  | Identifier . '(' ')'
   59  | Identifier . '(' Elist ')'

    '('  shift, and go to state 22

    $default  reduce using rule 57 (E)


State 11

   28 E: "++" . Identifier

    Identifier  shift, and go to state 23


State 12

   29 E: "--" . Identifier

    Identifier  shift, and go to state 24


State 13

   27 E: '+' . E

    Int_Constant  shift, and go to state 9
    Identifier    shift, and go to state 10
    "++"          shift, and go to state 11
    "--"          shift, and go to state 12
    '+'           shift, and go to state 13
    '-'           shift, and go to state 14
    '!'           shift, and go to state 15
    '~'           shift, and go to state 16
    '('           shift, and go to state 17

    E  go to state 25


State 14

   26 E: '-' . E

    Int_Constant  shift, and go to state 9
    Identifier    shift, and go to state 10
    "++"          shift, and go to state 11
    "--"          shift, and go to state 12
    '+'           shift, and go to state 13
    '-'           shift, and go to state 14
    '!'           shift, and go to state 15
    '~'           shift, and go to state 16
    '('           shift, and go to state 17

    E  go to state 26


State 15

   24 E: '!' . E

    Int_Constant  shift, and go to state 9
    Identifier    shift, and go to state 10
    "++"          shift, and go to state 11
    "--"          shift, and go to state 12
    '+'           shift, and go to state 13
    '-'           shift, and go to state 14
    '!'           shift, and go to state 15
    '~'           shift, and go to state 16
    '('           shift, and go to state 17

    E  go to state 27


State 16

   25 E: '~' . E

    Int_Constant  shift, and go to state 9
    Identifier    shift, and go to state 10
    "++"          shift, and go to state 11
    "--"          shift, and go to state 12
    '+'           shift, and go to state 13
    '-'           shift, and go to state 14
    '!'           shift, and go to state 15
    '~'           shift, and go to state 16
    '('           shift, and go to state 17

    E  go to state 28


State 17

   55 E: '(' . E ')'

    Int_Constant  shift, and go to state 9
    Identifier    shift, and go to state 10
    "++"          shift, and go to state 11
    "--"          shift, and go to state 12
    '+'           shift, and go to state 13
    '-'           shift, and go to state 14
    '!'           shift, and go to state 15
    '~'           shift, and go to state 16
    '('           shift, and go to state 17

    E  go to state 29


State 18

    2 P: P Type Identifier '=' E . ';'
   30 E: E . '*' E
   31  | E . '/' E
   32  | E . '%' E
   33  | E . '+' E
   34  | E . '-' E
   35  | E . "<<" E
   36  | E . ">>" E
   37  | E . '<' E
   38  | E . "<=" E
   39  | E . '>' E
   40  | E . ">=" E
   41  | E . "==" E
   42  | E . "!=" E
   43  | E . '&' E
   44  | E . '^' E
   45  | E . '|' E
   46  | E . "&&" E
   47  | E . "||" E
   48  | E . '?' E ':' E
   49  | E . '=' E
   50  | E . "+=" E
   51  | E . "-=" E
   52  | E . "*=" E
   53  | E . "/=" E
   54  | E . "%=" E

    "+="  shift, and go to state 30
    "-="  shift, and go to state 31
    "*="  shift, and go to state 32
    "/="  shift, and go to state 33
    "%="  shift, and go to state 34
    "&&"  shift, and go to state 35
    "||"  shift, and go to state 36
    "<<"  shift, and go to state 37
    ">>"  shift, and go to state 38
    "=="  shift, and go to state 39
    "!="  shift, and go to state 40
    "<="  shift, and go to state 41
    ">="  shift, and go to state 42
    '='   shift, and go to state 43
    '?'   shift, and go to state 44
    '|'   shift, and go to state 45
    '^'   shift, and go to state 46
    '&'   shift, and go to state 47
    '<'   shift, and go to state 48
    '>'   shift, and go to state 49
    '+'   shift, and go to state 50
    '-'   shift, and go to state 51
    '*'   shift, and go to state 52
    '/'   shift, and go to state 53
    '%'   shift, and go to state 54
    ';'   shift, and go to state 55


State 19

   62 deflist: Type . Identifier '=' E

    Identifier  shift, and go to state 56


State 20

   66 fn_dec: Type Identifier '(' ')' . ';'
   68 fn_def: Type Identifier '(' ')' . '{' SS '}'
   70       | Type Identifier '(' ')' . '{' def ';' SS '}'

    ';'  shift, and go to state 57
    '{'  shift, and go to state 58


State 21

   63 deflist: deflist . ',' Type Identifier '=' E
   67 fn_dec: Type Identifier '(' deflist . ')' ';'
   69 fn_def: Type Identifier '(' deflist . ')' '{' SS '}'
   71       | Type Identifier '(' deflist . ')' '{' def ';' SS '}'

    ','  shift, and go to state 59
    ')'  shift, and go to state 60


State 22

   58 E: Identifier '(' . ')'
   59  | Identifier '(' . Elist ')'

    Int_Constant  shift, and go to state 9
    Identifier    shift, and go to state 10
    "++"          shift, and go to state 11
    "--"          shift, and go to state 12
    '+'           shift, and go to state 13
    '-'           shift, and go to state 14
    '!'           shift, and go to state 15
    '~'           shift, and go to state 16
    '('           shift, and go to state 17
    ')'           shift, and go to state 61

    E      go to state 62
    Elist  go to state 63


State 23

   28 E: "++" Identifier .

    $default  reduce using rule 28 (E)


State 24

   29 E: "--" Identifier .

    $default  reduce using rule 29 (E)


State 25

   27 E: '+' E .
   30  | E . '*' E
   31  | E . '/' E
   32  | E . '%' E
   33  | E . '+' E
   34  | E . '-' E
   35  | E . "<<" E
   36  | E . ">>" E
   37  | E . '<' E
   38  | E . "<=" E
   39  | E . '>' E
   40  | E . ">=" E
   41  | E . "==" E
   42  | E . "!=" E
   43  | E . '&' E
   44  | E . '^' E
   45  | E . '|' E
   46  | E . "&&" E
   47  | E . "||" E
   48  | E . '?' E ':' E
   49  | E . '=' E
   50  | E . "+=" E
   51  | E . "-=" E
   52  | E . "*=" E
   53  | E . "/=" E
   54  | E . "%=" E

    $default  reduce using rule 27 (E)


State 26

   26 E: '-' E .
   30  | E . '*' E
   31  | E . '/' E
   32  | E . '%' E
   33  | E . '+' E
   34  | E . '-' E
   35  | E . "<<" E
   36  | E . ">>" E
   37  | E . '<' E
   38  | E . "<=" E
   39  | E . '>' E
   40  | E . ">=" E
   41  | E . "==" E
   42  | E . "!=" E
   43  | E . '&' E
   44  | E . '^' E
   45  | E . '|' E
   46  | E . "&&" E
   47  | E . "||" E
   48  | E . '?' E ':' E
   49  | E . '=' E
   50  | E . "+=" E
   51  | E . "-=" E
   52  | E . "*=" E
   53  | E . "/=" E
   54  | E . "%=" E

    $default  reduce using rule 26 (E)


State 27

   24 E: '!' E .
   30  | E . '*' E
   31  | E . '/' E
   32  | E . '%' E
   33  | E . '+' E
   34  | E . '-' E
   35  | E . "<<" E
   36  | E . ">>" E
   37  | E . '<' E
   38  | E . "<=" E
   39  | E . '>' E
   40  | E . ">=" E
   41  | E . "==" E
   42  | E . "!=" E
   43  | E . '&' E
   44  | E . '^' E
   45  | E . '|' E
   46  | E . "&&" E
   47  | E . "||" E
   48  | E . '?' E ':' E
   49  | E . '=' E
   50  | E . "+=" E
   51  | E . "-=" E
   52  | E . "*=" E
   53  | E . "/=" E
   54  | E . "%=" E

    $default  reduce using rule 24 (E)


State 28

   25 E: '~' E .
   30  | E . '*' E
   31  | E . '/' E
   32  | E . '%' E
   33  | E . '+' E
   34  | E . '-' E
   35  | E . "<<" E
   36  | E . ">>" E
   37  | E . '<' E
   38  | E . "<=" E
   39  | E . '>' E
   40  | E . ">=" E
   41  | E . "==" E
   42  | E . "!=" E
   43  | E . '&' E
   44  | E . '^' E
   45  | E . '|' E
   46  | E . "&&" E
   47  | E . "||" E
   48  | E . '?' E ':' E
   49  | E . '=' E
   50  | E . "+=" E
   51  | E . "-=" E
   52  | E . "*=" E
   53  | E . "/=" E
   54  | E . "%=" E

    $default  reduce using rule 25 (E)


State 29

   30 E: E . '*' E
   31  | E . '/' E
   32  | E . '%' E
   33  | E . '+' E
   34  | E . '-' E
   35  | E . "<<" E
   36  | E . ">>" E
   37  | E . '<' E
   38  | E . "<=" E
   39  | E . '>' E
   40  | E . ">=" E
   41  | E . "==" E
   42  | E . "!=" E
   43  | E . '&' E
   44  | E . '^' E
   45  | E . '|' E
   46  | E . "&&" E
   47  | E . "||" E
   48  | E . '?' E ':' E
   49  | E . '=' E
   50  | E . "+=" E
   51  | E . "-=" E
   52  | E . "*=" E
   53  | E . "/=" E
   54  | E . "%=" E
   55  | '(' E . ')'

    "+="  shift, and go to state 30
    "-="  shift, and go to state 31
    "*="  shift, and go to state 32
    "/="  shift, and go to state 33
    "%="  shift, and go to state 34
    "&&"  shift, and go to state 35
    "||"  shift, and go to state 36
    "<<"  shift, and go to state 37
    ">>"  shift, and go to state 38
    "=="  shift, and go to state 39
    "!="  shift, and go to state 40
    "<="  shift, and go to state 41
    ">="  shift, and go to state 42
    '='   shift, and go to state 43
    '?'   shift, and go to state 44
    '|'   shift, and go to state 45
    '^'   shift, and go to state 46
    '&'   shift, and go to state 47
    '<'   shift, and go to state 48
    '>'   shift, and go to state 49
    '+'   shift, and go to state 50
    '-'   shift, and go to state 51
    '*'   shift, and go to state 52
    '/'   shift, and go to state 53
    '%'   shift, and go to state 54
    ')'   shift, and go to state 64


State 30

   50 E: E "+=" . E

    Int_Constant  shift, and go to state 9
    Identifier    shift, and go to state 10
    "++"          shift, and go to state 11
    "--"          shift, and go to state 12
    '+'           shift, and go to state 13
    '-'           shift, and go to state 14
    '!'           shift, and go to state 15
    '~'           shift, and go to state 16
    '('           shift, and go to state 17

    E  go to state 65


State 31

   51 E: E "-=" . E

    Int_Constant  shift, and go to state 9
    Identifier    shift, and go to state 10
    "++"          shift, and go to state 11
    "--"          shift, and go to state 12
    '+'           shift, and go to state 13
    '-'           shift, and go to state 14
    '!'           shift, and go to state 15
    '~'           shift, and go to state 16
    '('           shift, and go to state 17

    E  go to state 66


State 32

   52 E: E "*=" . E

    Int_Constant  shift, and go to state 9
    Identifier    shift, and go to state 10
    "++"          shift, and go to state 11
    "--"          shift, and go to state 12
    '+'           shift, and go to state 13
    '-'           shift, and go to state 14
    '!'           shift, and go to state 15
    '~'           shift, and go to state 16
    '('           shift, and go to state 17

    E  go to state 67


State 33

   53 E: E "/=" . E

    Int_Constant  shift, and go to state 9
    Identifier    shift, and go to state 10
    "++"          shift, and go to state 11
    "--"          shift, and go to state 12
    '+'           shift, and go to state 13
    '-'           shift, and go to state 14
    '!'           shift, and go to state 15
    '~'           shift, and go to state 16
    '('           shift, and go to state 17

    E  go to state 68


State 34

   54 E: E "%=" . E

    Int_Constant  shift, and go to state 9
    Identifier    shift, and go to state 10
    "++"          shift, and go to state 11
    "--"          shift, and go to state 12
    '+'           shift, and go to state 13
    '-'           shift, and go to state 14
    '!'           shift, and go to state 15
    '~'           shift, and go to state 16
    '('           shift, and go to state 17

    E  go to state 69


State 35

   46 E: E "&&" . E

    Int_Constant  shift, and go to state 9
    Identifier    shift, and go to state 10
    "++"          shift, and go to state 11
    "--"          shift, and go to state 12
    '+'           shift, and go to state 13
    '-'           shift, and go to state 14
    '!'           shift, and go to state 15
    '~'           shift, and go to state 16
    '('           shift, and go to state 17

    E  go to state 70


State 36

   47 E: E "||" . E

    Int_Constant  shift, and go to state 9
    Identifier    shift, and go to state 10
    "++"          shift, and go to state 11
    "--"          shift, and go to state 12
    '+'           shift, and go to state 13
    '-'           shift, and go to state 14
    '!'           shift, and go to state 15
    '~'           shift, and go to state 16
    '('           shift, and go to state 17

    E  go to state 71


State 37

   35 E: E "<<" . E

    Int_Constant  shift, and go to state 9
    Identifier    shift, and go to state 10
    "++"          shift, and go to state 11
    "--"          shift, and go to state 12
    '+'           shift, and go to state 13
    '-'           shift, and go to state 14
    '!'           shift, and go to state 15
    '~'           shift, and go to state 16
    '('           shift, and go to state 17

    E  go to state 72


State 38

   36 E: E ">>" . E

    Int_Constant  shift, and go to state 9
    Identifier    shift, and go to state 10
    "++"          shift, and go to state 11
    "--"          shift, and go to state 12
    '+'           shift, and go to state 13
    '-'           shift, and go to state 14
    '!'           shift, and go to state 15
    '~'           shift, and go to state 16
    '('           shift, and go to state 17

    E  go to state 73


State 39

   41 E: E "==" . E

    Int_Constant  shift, and go to state 9
    Identifier    shift, and go to state 10
    "++"          shift, and go to state 11
    "--"          shift, and go to state 12
    '+'           shift, and go to state 13
    '-'           shift, and go to state 14
    '!'           shift, and go to state 15
    '~'           shift, and go to state 16
    '('           shift, and go to state 17

    E  go to state 74


State 40

   42 E: E "!=" . E

    Int_Constant  shift, and go to state 9
    Identifier    shift, and go to state 10
    "++"          shift, and go to state 11
    "--"          shift, and go to state 12
    '+'           shift, and go to state 13
    '-'           shift, and go to state 14
    '!'           shift, and go to state 15
    '~'           shift, and go to state 16
    '('           shift, and go to state 17

    E  go to state 75


State 41

   38 E: E "<=" . E

    Int_Constant  shift, and go to state 9
    Identifier    shift, and go to state 10
    "++"          shift, and go to state 11
    "--"          shift, and go to state 12
    '+'           shift, and go to state 13
    '-'           shift, and go to state 14
    '!'           shift, and go to state 15
    '~'           shift, and go to state 16
    '('           shift, and go to state 17

    E  go to state 76


State 42

   40 E: E ">=" . E

    Int_Constant  shift, and go to state 9
    Identifier    shift, and go to state 10
    "++"          shift, and go to state 11
    "--"          shift, and go to state 12
    '+'           shift, and go to state 13
    '-'           shift, and go to state 14
    '!'           shift, and go to state 15
    '~'           shift, and go to state 16
    '('           shift, and go to state 17

    E  go to state 77


State 43

   49 E: E '=' . E

    Int_Constant  shift, and go to state 9
    Identifier    shift, and go to state 10
    "++"          shift, and go to state 11
    "--"          shift, and go to state 12
    '+'           shift, and go to state 13
    '-'           shift, and go to state 14
    '!'           shift, and go to state 15
    '~'           shift, and go to state 16
    '('           shift, and go to state 17

    E  go to state 78


State 44

   48 E: E '?' . E ':' E

    Int_Constant  shift, and go to state 9
    Identifier    shift, and go to state 10
    "++"          shift, and go to state 11
    "--"          shift, and go to state 12
    '+'           shift, and go to state 13
    '-'           shift, and go to state 14
    '!'           shift, and go to state 15
    '~'           shift, and go to state 16
    '('           shift, and go to state 17

    E  go to state 79


State 45

   45 E: E '|' . E

    Int_Constant  shift, and go to state 9
    Identifier    shift, and go to state 10
    "++"          shift, and go to state 11
    "--"          shift, and go to state 12
    '+'           shift, and go to state 13
    '-'           shift, and go to state 14
    '!'           shift, and go to state 15
    '~'           shift, and go to state 16
    '('           shift, and go to state 17

    E  go to state 80


State 46

   44 E: E '^' . E

    Int_Constant  shift, and go to state 9
    Identifier    shift, and go to state 10
    "++"          shift, and go to state 11
    "--"          shift, and go to state 12
    '+'           shift, and go to state 13
    '-'           shift, and go to state 14
    '!'           shift, and go to state 15
    '~'           shift, and go to state 16
    '('           shift, and go to state 17

    E  go to state 81


State 47

   43 E: E '&' . E

    Int_Constant  shift, and go to state 9
    Identifier    shift, and go to state 10
    "++"          shift, and go to state 11
    "--"          shift, and go to state 12
    '+'           shift, and go to state 13
    '-'           shift, and go to state 14
    '!'           shift, and go to state 15
    '~'           shift, and go to state 16
    '('           shift, and go to state 17

    E  go to state 82


State 48

   37 E: E '<' . E

    Int_Constant  shift, and go to state 9
    Identifier    shift, and go to state 10
    "++"          shift, and go to state 11
    "--"          shift, and go to state 12
    '+'           shift, and go to state 13
    '-'           shift, and go to state 14
    '!'           shift, and go to state 15
    '~'           shift, and go to state 16
    '('           shift, and go to state 17

    E  go to state 83


State 49

   39 E: E '>' . E

    Int_Constant  shift, and go to state 9
    Identifier    shift, and go to state 10
    "++"          shift, and go to state 11
    "--"          shift, and go to state 12
    '+'           shift, and go to state 13
    '-'           shift, and go to state 14
    '!'           shift, and go to state 15
    '~'           shift, and go to state 16
    '('           shift, and go to state 17

    E  go to state 84


State 50

   33 E: E '+' . E

    Int_Constant  shift, and go to state 9
    Identifier    shift, and go to state 10
    "++"          shift, and go to state 11
    "--"          shift, and go to state 12
    '+'           shift, and go to state 13
    '-'           shift, and go to state 14
    '!'           shift, and go to state 15
    '~'           shift, and go to state 16
    '('           shift, and go to state 17

    E  go to state 85


State 51

   34 E: E '-' . E

    Int_Constant  shift, and go to state 9
    Identifier    shift, and go to state 10
    "++"          shift, and go to state 11
    "--"          shift, and go to state 12
    '+'           shift, and go to state 13
    '-'           shift, and go to state 14
    '!'           shift, and go to state 15
    '~'           shift, and go to state 16
    '('           shift, and go to state 17

    E  go to state 86


State 52

   30 E: E '*' . E

    Int_Constant  shift, and go to state 9
    Identifier    shift, and go to state 10
    "++"          shift, and go to state 11
    "--"          shift, and go to state 12
    '+'           shift, and go to state 13
    '-'           shift, and go to state 14
    '!'           shift, and go to state 15
    '~'           shift, and go to state 16
    '('           shift, and go to state 17

    E  go to state 87


State 53

   31 E: E '/' . E

    Int_Constant  shift, and go to state 9
    Identifier    shift, and go to state 10
    "++"          shift, and go to state 11
    "--"          shift, and go to state 12
    '+'           shift, and go to state 13
    '-'           shift, and go to state 14
    '!'           shift, and go to state 15
    '~'           shift, and go to state 16
    '('           shift, and go to state 17

    E  go to state 88


State 54

   32 E: E '%' . E

    Int_Constant  shift, and go to state 9
    Identifier    shift, and go to state 10
    "++"          shift, and go to state 11
    "--"          shift, and go to state 12
    '+'           shift, and go to state 13
    '-'           shift, and go to state 14
    '!'           shift, and go to state 15
    '~'           shift, and go to state 16
    '('           shift, and go to state 17

    E  go to state 89


State 55

    2 P: P Type Identifier '=' E ';' .

    $default  reduce using rule 2 (P)


State 56

   62 deflist: Type Identifier . '=' E

    '='  shift, and go to state 90


State 57

   66 fn_dec: Type Identifier '(' ')' ';' .

    $default  reduce using rule 66 (fn_dec)


State 58

   68 fn_def: Type Identifier '(' ')' '{' . SS '}'
   70       | Type Identifier '(' ')' '{' . def ';' SS '}'

    Type  shift, and go to state 91

    $default  reduce using rule 5 (SS)

    SS   go to state 92
    def  go to state 93


State 59

   63 deflist: deflist ',' . Type Identifier '=' E

    Type  shift, and go to state 94


State 60

   67 fn_dec: Type Identifier '(' deflist ')' . ';'
   69 fn_def: Type Identifier '(' deflist ')' . '{' SS '}'
   71       | Type Identifier '(' deflist ')' . '{' def ';' SS '}'

    ';'  shift, and go to state 95
    '{'  shift, and go to state 96


State 61

   58 E: Identifier '(' ')' .

    $default  reduce using rule 58 (E)


State 62

   30 E: E . '*' E
   31  | E . '/' E
   32  | E . '%' E
   33  | E . '+' E
   34  | E . '-' E
   35  | E . "<<" E
   36  | E . ">>" E
   37  | E . '<' E
   38  | E . "<=" E
   39  | E . '>' E
   40  | E . ">=" E
   41  | E . "==" E
   42  | E . "!=" E
   43  | E . '&' E
   44  | E . '^' E
   45  | E . '|' E
   46  | E . "&&" E
   47  | E . "||" E
   48  | E . '?' E ':' E
   49  | E . '=' E
   50  | E . "+=" E
   51  | E . "-=" E
   52  | E . "*=" E
   53  | E . "/=" E
   54  | E . "%=" E
   60 Elist: E .

    "+="  shift, and go to state 30
    "-="  shift, and go to state 31
    "*="  shift, and go to state 32
    "/="  shift, and go to state 33
    "%="  shift, and go to state 34
    "&&"  shift, and go to state 35
    "||"  shift, and go to state 36
    "<<"  shift, and go to state 37
    ">>"  shift, and go to state 38
    "=="  shift, and go to state 39
    "!="  shift, and go to state 40
    "<="  shift, and go to state 41
    ">="  shift, and go to state 42
    '='   shift, and go to state 43
    '?'   shift, and go to state 44
    '|'   shift, and go to state 45
    '^'   shift, and go to state 46
    '&'   shift, and go to state 47
    '<'   shift, and go to state 48
    '>'   shift, and go to state 49
    '+'   shift, and go to state 50
    '-'   shift, and go to state 51
    '*'   shift, and go to state 52
    '/'   shift, and go to state 53
    '%'   shift, and go to state 54

    $default  reduce using rule 60 (Elist)


State 63

   59 E: Identifier '(' Elist . ')'
   61 Elist: Elist . ',' E

    ','  shift, and go to state 97
    ')'  shift, and go to state 98


State 64

   55 E: '(' E ')' .

    $default  reduce using rule 55 (E)


State 65

   30 E: E . '*' E
   31  | E . '/' E
   32  | E . '%' E
   33  | E . '+' E
   34  | E . '-' E
   35  | E . "<<" E
   36  | E . ">>" E
   37  | E . '<' E
   38  | E . "<=" E
   39  | E . '>' E
   40  | E . ">=" E
   41  | E . "==" E
   42  | E . "!=" E
   43  | E . '&' E
   44  | E . '^' E
   45  | E . '|' E
   46  | E . "&&" E
   47  | E . "||" E
   48  | E . '?' E ':' E
   49  | E . '=' E
   50  | E . "+=" E
   50  | E "+=" E .
   51  | E . "-=" E
   52  | E . "*=" E
   53  | E . "/=" E
   54  | E . "%=" E

    "+="  shift, and go to state 30
    "-="  shift, and go to state 31
    "*="  shift, and go to state 32
    "/="  shift, and go to state 33
    "%="  shift, and go to state 34
    "&&"  shift, and go to state 35
    "||"  shift, and go to state 36
    "<<"  shift, and go to state 37
    ">>"  shift, and go to state 38
    "=="  shift, and go to state 39
    "!="  shift, and go to state 40
    "<="  shift, and go to state 41
    ">="  shift, and go to state 42
    '='   shift, and go to state 43
    '?'   shift, and go to state 44
    '|'   shift, and go to state 45
    '^'   shift, and go to state 46
    '&'   shift, and go to state 47
    '<'   shift, and go to state 48
    '>'   shift, and go to state 49
    '+'   shift, and go to state 50
    '-'   shift, and go to state 51
    '*'   shift, and go to state 52
    '/'   shift, and go to state 53
    '%'   shift, and go to state 54

    $default  reduce using rule 50 (E)


State 66

   30 E: E . '*' E
   31  | E . '/' E
   32  | E . '%' E
   33  | E . '+' E
   34  | E . '-' E
   35  | E . "<<" E
   36  | E . ">>" E
   37  | E . '<' E
   38  | E . "<=" E
   39  | E . '>' E
   40  | E . ">=" E
   41  | E . "==" E
   42  | E . "!=" E
   43  | E . '&' E
   44  | E . '^' E
   45  | E . '|' E
   46  | E . "&&" E
   47  | E . "||" E
   48  | E . '?' E ':' E
   49  | E . '=' E
   50  | E . "+=" E
   51  | E . "-=" E
   51  | E "-=" E .
   52  | E . "*=" E
   53  | E . "/=" E
   54  | E . "%=" E
